# ImBored

./: .gitignore  CMakeLists.txt  copilot-instructions.md  framework-plan.md  main.cpp
_codeql_build_dir/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/src/: Makefile  cmake_install.cmake
_codeql_build_dir/src/core/: Makefile  cmake_install.cmake
_codeql_build_dir/src/rendering/: Makefile  cmake_install.cmake
_codeql_build_dir/src/ui/: Makefile  cmake_install.cmake
cmake/: SkiaFetchContent.cmake
docs/: BUILD.md  SKIA_SETUP.md
include/core/: window.hpp
include/rendering/: renderer.hpp
include/ui/: colrv1_renderer.hpp  emoji_manager.hpp  font_manager.hpp  smart_text.hpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt  window.cpp
src/rendering/: CMakeLists.txt  renderer.cpp
src/ui/: CMakeLists.txt  colrv1_renderer.cpp  emoji_manager.cpp  font_manager.cpp  smart_text.cpp
